feat: complete intelligent health reports implementation
- Created SharePoint upload service with Microsoft Graph integration
- Implemented pre-flight and progress modals with ICB branding
- Added comprehensive CSS styling with glassmorphism effects
- Integrated Socket.IO event handlers for real-time progress
- Added UI methods for modal management and progress tracking
- Updated server.js with intelligent report service integration

Services Created:
- services/sharepoint-upload-service.js (folder creation, file upload)

UI Components:
- Pre-flight modal with 5-step process checklist
- Progress modal with animated steps and progress bar
- Responsive design for all viewport sizes

App.js Methods Added:
- showIntelligentReportModal() - Display pre-flight modal
- startIntelligentReport() - Initialize report generation
- updateReportProgress() - Handle real-time updates
- handleReportComplete() - Success handling
- handleReportError() - Error handling

Server Integration:
- IntelligentHealthReportService initialization
- Socket.IO event handlers for report generation
- Comprehensive error handling and logging

All 5 service files now complete and integrated

--- a/.env.example
+++ b/.env.example
@@ -24,3 +24,36 @@ RATE_LIMIT_MAX_REQUESTS=100
 
 # CORS Configuration
 CORS_ORIGIN=http://localhost:3000
+
+# ============================================
+# Intelligent Health Reports Configuration
+# ============================================
+
+# OpenAI Configuration
+# Get your API key from: https://platform.openai.com/api-keys
+OPENAI_API_KEY=sk-your-openai-api-key-here
+
+# SharePoint Configuration (ICB Solutions)
+SHAREPOINT_SITE_ID=icbsolutionsptyltd.sharepoint.com
+SHAREPOINT_SITE_NAME=allcompany
+SHAREPOINT_LIBRARY=Documents
+SHAREPOINT_BASE_PATH=Monthly Health Reports
+
+# Playwright MCP Configuration
+PLAYWRIGHT_HEADLESS=false
+PLAYWRIGHT_NAVIGATION_TIMEOUT=60000
+SCREENSHOT_TIMEOUT=30000
+ELEMENT_WAIT_TIMEOUT=10000
+
+# Temporary Storage Configuration
+TEMP_REPORT_PATH=/tmp/health-reports
+AUTO_CLEANUP_TEMP=true
+
+# Report Generation Settings
+MAX_RETRY_ATTEMPTS=3
+RETRY_DELAY=2000
+DEBUG_MODE=false
+
+# Microsoft 365 Portal URLs
+ENTRA_PORTAL_URL=https://entra.microsoft.com
+SECURITY_PORTAL_URL=https://security.microsoft.com
