--- a/package.json
+++ b/package.json
@@ -19,18 +19,21 @@
   "license": "MIT",
   "dependencies": {
     "@merill/lokka": "^0.3.0",
+    "@microsoft/microsoft-graph-client": "^3.0.7",
     "@modelcontextprotocol/sdk": "^0.4.0",
     "chart.js": "^4.5.0",
     "chartjs-adapter-date-fns": "^3.0.0",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
     "date-fns": "^4.1.0",
-    "dotenv": "^16.3.1",
+    "docx": "^9.5.1",
+    "dotenv": "^16.6.1",
     "express": "^4.18.2",
     "express-rate-limit": "^6.10.0",
     "helmet": "^7.0.0",
     "html2canvas": "^1.4.1",
     "jspdf": "^3.0.3",
+    "openai": "^6.0.0",
     "socket.io": "^4.7.2",
     "uuid": "^9.0.0"
   },
