--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "html2canvas": "^1.4.1",
     "jspdf": "^3.0.3",
     "openai": "^6.0.0",
+    "playwright": "^1.55.1",
     "socket.io": "^4.7.2",
     "uuid": "^9.0.0"
   },
