--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "jspdf": "^3.0.3",
     "openai": "^6.0.0",
     "playwright": "^1.55.1",
+    "sharp": "^0.34.4",
     "socket.io": "^4.7.2",
     "uuid": "^9.0.0"
   },
